tests/ui/issues/issue-24819.stderr
error[E0308]: mismatched types
  --> $DIR/issue-24819.rs:5:9
   |
LL |     foo(&mut v);
   |     --- ^^^^^^ expected `&mut HashSet<u32>`, found `&mut Vec<_>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut HashSet<u32>`
              found mutable reference `&mut Vec<_>`
note: function defined here
  --> $DIR/issue-24819.rs:10:4
   |
LL | fn foo(h: &mut HashSet<u32>) {
   |    ^^^ --------------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
